# scap

./: .dir-locals.el  .gitignore  CMakeLists.txt  camera_container.cpp  camera_container.h  cpp_swatch_scan.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
